--- a/armadura/Armadura/Armadura.iOS/Armadura.iOS.csproj
+++ b/armadura/Armadura/Armadura.iOS/Armadura.iOS.csproj
@@ -142,4 +142,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Clave.png" />
+  </ItemGroup>
 </Project>
